tests/type_errors/default_param_type_mismatch.nos
# expect_error: type mismatch
# Default parameter value type should match the parameter type from usage
greet(name = 42) = "Hello, " ++ name
main() = greet()
